test-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: AWS_ACCOUNT_ID.dkr.ecr.us-west-2.amazonaws.com/myimages:latest
        ports:
        - containerPort: 80
