test-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-app-route
  namespace: default
spec:
  parentRefs:
  - name: eg
    sectionName: https
  hostnames:
  - test.devopsmaffia.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-service
      port: 80
